--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Rajan jha",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^2.4.2",
     "lodash": "^4.17.11",
     "yargs": "^13.2.1"
   }
